[package]
name = "rext2fs"
description = "Implementation of the ext2 file system"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
